# ndsparse

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yaml
examples/: Cargo.toml  dynamic_arrays.rs
fuzz/: Cargo.toml  coo.rs  csl.rs  random_coo.rs  random_csl.rs
ndsparse/: Cargo.toml
ndsparse-bindings/: Cargo.toml
ndsparse-bindings/src/: lib.rs
ndsparse-examples/: Cargo.toml  dynamic_arrays.rs
ndsparse-fuzz/: Cargo.toml  coo.rs  csl.rs  random_coo.rs  random_csl.rs
ndsparse/fuzz/: Cargo.toml
ndsparse/fuzz/fuzz_targets/: coo.rs  coo_fuzz.rs  csl_fuzz.rs  random_coo.rs  random_coo_fuzz.rs  random_csl.rs  random_csl_fuzz.rs
ndsparse/src/: coo.rs  csl.rs  dims.rs  doc_tests.rs  error.rs  lib.rs  tests.rs  utils.rs
ndsparse/src/coo/: coo_error.rs  coo_utils.rs
ndsparse/src/csl/: csl_error.rs  csl_iter.rs  csl_line_constructor.rs  csl_line_iter.rs  csl_quickcheck.rs  csl_rayon.rs  csl_rnd.rs  csl_utils.rs
ndsparse/src/tests/: quickcheck.rs
scripts/: commons.sh  fuzz.sh  test-common.sh  test-nightly.sh  test.sh  tests-common.sh  tests-nightly.sh  tests.sh  tools.sh
