[dependencies]
cl-traits = "2.0"
ndsparse = { features = ["alloc"], path = "../ndsparse" }
pyo3 = { features = ["extension-module"], optional = true, version = "0.9" }
wasm-bindgen = { optional = true, version = "0.2" }

[features]
default = []
with-pyo3 = ["pyo3"]
with-wasm-bindgen = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib"]

[package]
edition = "2018"
name = "ndsparse-bindings"
publish = false
version = "0.0.0"