[dependencies]
cl-traits = { default-features = false, version = "4.0" }
ndsparse = { default-features = false, features = ["alloc"], path = "../ndsparse" }
pyo3 = { default-features = false, features = ["extension-module", "macros"], optional = true, version = "0.10" }
wasm-bindgen = { default-features = false, features = ["std"], optional = true, version = "0.2" }

[features]
default = []
with-pyo3 = ["pyo3"]
with-wasm-bindgen = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib"]

[package]
edition = "2018"
license = "Apache-2.0"
name = "ndsparse-bindings"
publish = false
version = "0.0.0"