[dependencies]
ndsparse = { path = "../ndsparse" }
cl-traits = { default-features = false, features = ["with-arrayvec", "with-smallvec"], version = "4.0" }
arrayvec = { default-features = false, version = "0.5" }
smallvec = { default-features = false, version = "1.2" }

[[example]]
name = "dynamic_arrays"
path = "dynamic_arrays.rs"

[package]
edition = "2018"
license = "Apache-2.0"
name = "ndsparse-examples"
publish = false
version = "0.0.0"