[dependencies]
arrayvec = { default-features = false, version = "0.5" }
cl-traits = { default-features = false, features = ["with-arrayvec", "with-smallvec"], git = "https://github.com/c410-f3r/cl-traits" }
ndsparse = { path = "../ndsparse" }
smallvec = { default-features = false, version = "1.0" }

[[example]]
name = "dynamic_arrays"
path = "dynamic_arrays.rs"

[package]
edition = "2018"
license = "Apache-2.0"
name = "ndsparse-examples"
publish = false
version = "0.0.0"

[workspace]
