[dependencies]
arrayvec = { default-features = false, version = "0.7" }
cl-traits = { default-features = false, features = ["with-arrayvec", "with-smallvec"], version = "5.0" }
ndsparse = { path = "../ndsparse" }
smallvec = { default-features = false, version = "1.0" }

[[example]]
name = "dynamic_arrays"
path = "dynamic_arrays.rs"

[package]
edition = "2018"
license = "Apache-2.0"
name = "ndsparse-examples"
publish = false
version = "0.0.0"
