[dependencies]
cl-traits = { default-features = false, version = "4.0" }
rand = { default-features = false, optional = true, version = "0.7" }
rayon = { default-features = false, optional = true, version = "1.0" }
serde = { default-features = false, features = ["derive"], optional = true, version = "1.0" }

[features]
alloc = ["cl-traits/alloc", "rand/alloc", "serde/alloc"]
const-generics = ["cl-traits/const-generics"]
default = []
std = ["alloc", "cl-traits/std", "rand/std", "serde/std"]
with-rand = ["rand"]
with-rayon = ["rayon", "std"]
with-serde = ["cl-traits/with-serde", "rand/serde1", "serde"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["data-structures", "concurrency", "science", "no-std"]
description = "Sparse structures for N-dimensions"
edition = "2018"
keywords = ["coo", "csr", "dimension", "sparse", "structure"]
license = "Apache-2.0"
name = "ndsparse"
readme = "README.md"
repository = "https://github.com/c410-f3r/ndsparse/"
version = "0.6.0"

[package.metadata.docs.rs]
all-features = true
