[dependencies]
cl-traits = { default-features = false, git = "https://github.com/c410-f3r/cl-traits" }
rand = { default-features = false, optional = true, version = "0.7" }
rayon = { default-features = false, optional = true, version = "1.0" }
serde = { branch = "const-gen", default-features = false, features = ["const-generics", "derive"], optional = true, git = "https://github.com/c410-f3r/serde" }

[features]
alloc = ["cl-traits/alloc"]
default = []
std = ["alloc", "cl-traits/std"]
with-rand = ["rand"]
with-rayon = ["rayon", "std"]
with-serde = ["serde"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["data-structures", "concurrency", "science", "no-std"]
description = "Sparse structures for N-dimensions"
edition = "2018"
keywords = ["coo", "csr", "dimension", "sparse", "structure"]
license = "Apache-2.0"
name = "ndsparse"
readme = "README.md"
repository = "https://github.com/c410-f3r/ndsparse/"
version = "0.7.3"

[package.metadata.docs.rs]
all-features = true
